--- a/LeBreakout.vcxproj
+++ b/LeBreakout.vcxproj
@@ -100,6 +100,13 @@
       <AdditionalLibraryDirectories>$(ProjectDir)lib\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sigil.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <CustomBuildStep>
+      <Command>
+      </Command>
+    </CustomBuildStep>
+    <PreBuildEvent>
+      <Command>xcopy /s/y "$(SolutionDir)lib\dlls" "$(OutDir)"</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -119,6 +126,13 @@
       <AdditionalLibraryDirectories>$(ProjectDir)lib\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sigil.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <CustomBuildStep>
+      <Command>
+      </Command>
+    </CustomBuildStep>
+    <PreBuildEvent>
+      <Command>xcopy /s/y "$(SolutionDir)lib\dlls" "$(OutDir)"</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -152,12 +166,15 @@
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\utils\Colors.cpp" />
+    <ClCompile Include="src\utils\fonts.cpp" />
     <ClCompile Include="src\utils\Rectangles.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\utils\Colors.h" />
+    <ClInclude Include="src\utils\fonts.h" />
     <ClInclude Include="src\utils\Rectangles.h" />
+    <ClInclude Include="src\utils\Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
