--- a/LeBreakout.vcxproj
+++ b/LeBreakout.vcxproj
@@ -163,16 +163,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\constants.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\screens\menu.cpp" />
     <ClCompile Include="src\utils\Colors.cpp" />
     <ClCompile Include="src\utils\fonts.cpp" />
+    <ClCompile Include="src\utils\math.cpp" />
     <ClCompile Include="src\utils\Rectangles.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\constants.h" />
     <ClInclude Include="src\game.h" />
+    <ClInclude Include="src\screens\menu.h" />
+    <ClInclude Include="src\screens\screens.h" />
     <ClInclude Include="src\utils\Colors.h" />
     <ClInclude Include="src\utils\fonts.h" />
+    <ClInclude Include="src\utils\math.h" />
     <ClInclude Include="src\utils\Rectangles.h" />
     <ClInclude Include="src\utils\Vector.h" />
   </ItemGroup>
