--- a/LeBreakout.vcxproj.filters
+++ b/LeBreakout.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\entities\ball.cpp">
       <Filter>Archivos de recursos\entities</Filter>
     </ClCompile>
+    <ClCompile Include="src\utils\circles.cpp">
+      <Filter>Archivos de recursos\utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\utils\Colors.h">
@@ -109,6 +112,9 @@
     </ClInclude>
     <ClInclude Include="src\entities\ball.h">
       <Filter>Archivos de encabezado\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\circles.h">
+      <Filter>Archivos de encabezado\utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
