--- a/LeBreakout.vcxproj.filters
+++ b/LeBreakout.vcxproj.filters
@@ -33,13 +33,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\utils\Rectangles.cpp">
+    <ClCompile Include="src\utils\rectangles.cpp">
       <Filter>Archivos de recursos\utils</Filter>
     </ClCompile>
     <ClCompile Include="src\main.cpp">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
-    <ClCompile Include="src\utils\Colors.cpp">
+    <ClCompile Include="src\utils\colors.cpp">
       <Filter>Archivos de recursos\utils</Filter>
     </ClCompile>
     <ClCompile Include="src\game.cpp">
