--- a/LeBreakout.vcxproj
+++ b/LeBreakout.vcxproj
@@ -92,7 +92,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)lib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)lib\include;$(ProjectDir)src\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -116,7 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)lib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)lib\include;$(SolutionDir)src\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -164,6 +164,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="powerup.cpp" />
     <ClCompile Include="src\constants.cpp" />
     <ClCompile Include="src\entities\ball.cpp" />
     <ClCompile Include="src\entities\block.cpp" />
@@ -181,6 +182,7 @@
     <ClCompile Include="src\utils\rectangles.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="powerup.h" />
     <ClInclude Include="src\constants.h" />
     <ClInclude Include="src\entities\ball.h" />
     <ClInclude Include="src\entities\block.h" />
@@ -196,7 +198,7 @@
     <ClInclude Include="src\utils\fonts.h" />
     <ClInclude Include="src\utils\math.h" />
     <ClInclude Include="src\utils\rectangles.h" />
-    <ClInclude Include="src\utils\Vector.h" />
+    <ClInclude Include="src\utils\vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
