--- a/LeBreakout.vcxproj
+++ b/LeBreakout.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="src\entities\powerup.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\screens\draws\gameplayDraws.cpp" />
     <ClCompile Include="src\screens\gameplay.cpp" />
     <ClCompile Include="src\screens\menu.cpp" />
     <ClCompile Include="src\utils\circles.cpp" />
@@ -189,6 +190,7 @@
     <ClInclude Include="src\entities\player.h" />
     <ClInclude Include="src\entities\powerup.h" />
     <ClInclude Include="src\game.h" />
+    <ClInclude Include="src\screens\draws\gameplayDraws.h" />
     <ClInclude Include="src\screens\gameplay.h" />
     <ClInclude Include="src\screens\menu.h" />
     <ClInclude Include="src\screens\screens.h" />
