--- a/LeBreakout.vcxproj.filters
+++ b/LeBreakout.vcxproj.filters
@@ -90,6 +90,12 @@
     <ClCompile Include="src\screens\draws\gameplayDraws.cpp">
       <Filter>Archivos de recursos\screens\draws</Filter>
     </ClCompile>
+    <ClCompile Include="src\screens\rules.cpp">
+      <Filter>Archivos de recursos\screens</Filter>
+    </ClCompile>
+    <ClCompile Include="src\screens\credits.cpp">
+      <Filter>Archivos de recursos\screens</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\utils\colors.h">
@@ -145,6 +151,12 @@
     </ClInclude>
     <ClInclude Include="src\screens\draws\gameplayDraws.h">
       <Filter>Archivos de encabezado\screens\draws</Filter>
+    </ClInclude>
+    <ClInclude Include="src\screens\rules.h">
+      <Filter>Archivos de encabezado\screens</Filter>
+    </ClInclude>
+    <ClInclude Include="src\screens\credits.h">
+      <Filter>Archivos de encabezado\screens</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
