--- a/LeBreakout.vcxproj
+++ b/LeBreakout.vcxproj
@@ -175,7 +175,7 @@ xcopy /s/y "$(SolutionDir)assets\" "$(OutDir)assets\"</Command>
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\screens\credits.cpp" />
-    <ClCompile Include="src\screens\draws\gameplayDraws.cpp" />
+    <ClCompile Include="src\screens\draws\gameplay_draws.cpp" />
     <ClCompile Include="src\screens\gameplay.cpp" />
     <ClCompile Include="src\screens\menu.cpp" />
     <ClCompile Include="src\screens\rules.cpp" />
@@ -196,7 +196,7 @@ xcopy /s/y "$(SolutionDir)assets\" "$(OutDir)assets\"</Command>
     <ClInclude Include="src\entities\powerup.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\screens\credits.h" />
-    <ClInclude Include="src\screens\draws\gameplayDraws.h" />
+    <ClInclude Include="src\screens\draws\gameplay_draws.h" />
     <ClInclude Include="src\screens\gameplay.h" />
     <ClInclude Include="src\screens\menu.h" />
     <ClInclude Include="src\screens\rules.h" />
